--- a/admin/admin.html
+++ b/admin/admin.html
@@ -19,11 +19,6 @@
                                 <a>
                                   <img class="logo" src="../images/logo.png">
                                 </a>
-                                <!-- <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-                                    <span aria-hidden="true"></span>
-                                    <span aria-hidden="true"></span>
-                                    <span aria-hidden="true"></span>
-                                </a> -->
                             </div>
                         </nav>
                     </thead>
@@ -32,22 +27,16 @@
                         <ul class="menu-list">
                             <li><a id="today-order" class="choice is-active" onclick="loadTodayOrders()">Today Order</a></li>
                             <li>
-                                <a id="order-history" class="choice">Order history</a>
-                                <ul>
-                                    <li> <p id="order-detail-label" class="menu-label">Order history detail</p></li>
-                                </ul>
+                                <a id="order-history" class="choice">Order history</a>        
+                                <li> <p id="order-detail-label" class="menu-label">| Order history detail</p></li>
                             </li>
                             <li>
-                                <a id="users" class="choice" onclick="loadUser()">Users</a>
-                                <ul>
-                                    <li><p  id="user-detail-label" class="menu-label">User detail</p></li>
-                                </ul>
+                                <a id="users" class="choice" onclick="loadUser()">Users</a>                            
+                                    <li><p  id="user-detail-label" class="menu-label">| User detail</p></li>                           
                             </li>   
                             <li>
-                                <a id="product" class="choice" onclick="loadProduct()">Product list</a>
-                                <ul>
-                                    <li> <p  id="product-detail-label" class="menu-label">Product detail</p></li>
-                                </ul>
+                                <a id="product" class="choice" onclick="loadProduct()">Product list</a>                  
+                                <li> <p  id="product-detail-label" class="menu-label">| Product detail</p></li>                             
                             </li>
                         </ul>
                       </aside>
@@ -60,15 +49,14 @@
                                     <div class="navbar-item">
                                         <div class="">
                                             <div class="media">
-                                                <div class="media-left">
-                                                    <figure class="image is-48x48">
-                                                      <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
-                                                    </figure>
-                                                </div>
                                                 <div class="media-content">
                                                     <p class="title is-4">John Smith</p>
-                                                    <p class="subtitle is-6">@johnsmith</p>
                                                 </div>
+                                                <div class="media-right">
+                                                        <figure class="image is-48x48">
+                                                          <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
+                                                        </figure>
+                                                    </div>
                                             </div>
                                         </div>
                                     </div>
