--- a/admin/admin.html
+++ b/admin/admin.html
@@ -25,7 +25,7 @@
                     <tbody>
                     <aside class="menu">
                         <ul class="menu-list">
-                            <li><a id="today-order" class="choice is-active" onclick="loadTodayOrders()">Today Order</a></li>
+                            <li><a id="today-order" class="choice is-active">Today Order</a></li>
                             <li>
                                 <a id="order-history" class="choice">Order history</a>        
                                 <li> <p id="order-detail-label" class="menu-label">| Order history detail</p></li>
@@ -46,18 +46,15 @@
                         <thead>
                             <nav class="navbar" role="navigation" aria-label="main navigation">
                                 <div class="navbar-end">
-                                    <div class="navbar-item">
-                                        <div class="">
-                                            <div class="media">
-                                                <div class="media-content">
-                                                    <p class="title is-4">John Smith</p>
-                                                </div>
-                                                <div class="media-right">
-                                                        <figure class="image is-48x48">
-                                                          <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
-                                                        </figure>
-                                                    </div>
-                                            </div>
+                                    <div class="media">
+                                        <div class="media-content">
+                                            <p class="title is-4">John Smith</p>
+                                            <!-- <p class="subtitle is-6">@johnsmith</p> -->
+                                        </div>
+                                        <div class="media-left">
+                                            <figure class="image is-48x48">
+                                                <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
+                                            </figure>
                                         </div>
                                     </div>
                                 </div>
