--- a/admin/admin.html
+++ b/admin/admin.html
@@ -25,7 +25,7 @@
                     <tbody>
                     <aside class="menu">
                         <ul class="menu-list">
-                            <li><a id="today-order" class="choice is-active">Today Order</a></li>
+                            <li><a id="today-order" class="choice is-active" onclick="loadTodayOrders()">Today Order</a></li>
                             <li>
                                 <a id="order-history" class="choice">Order history</a>        
                                 <li> <p id="order-detail-label" class="menu-label">| Order history detail</p></li>
