--- a/server/test.html
+++ b/server/test.html
@@ -3,28 +3,13 @@
 
     </head>
     <body>
-        <div id="book-list">
+        <div id="header">
             
         </div>
-        <button id="get-button">Get Book-List</button>
     </body>
 
     <script>
-        document.getElementById("get-button").addEventListener("click", () => {
-            var http = new XMLHttpRequest();
-            http.open("GET", "http://127.0.0.1:3000/books", true);
-            http.send();
-            var bookList = document.getElementById("book-list");
-            http.onreadystatechange = function () {
-                if (this.readyState == 4 && this.status == 200){
-                    var  books = JSON.parse(this.response);
-                    books.forEach(book => {
-                        var newBook = document.createElement('div');
-                        newBook.innerHTML = book.name;
-                        bookList.appendChild(newBook);
-                    });
-                }
-            }
-        });
+        
     </script>
+    <script src="./test.js"></script>
 </html>
