--- a/admin/admin.html
+++ b/admin/admin.html
@@ -38,6 +38,7 @@
                                 <a id="product" class="choice" onclick="loadProduct()">Product list</a>                  
                                 <li> <p  id="product-detail-label" class="menu-label">| Product detail</p></li>                             
                             </li>
+                            <li><a id="add-product" class="choice" onclick="loadAddForm()">Add new product</a></li>
                         </ul>
                       </aside>
                     </tbody>
@@ -115,6 +116,7 @@
                             </div>
                             <div id="user-content" class="content tab"></div>
                             <div id="product-content" class="content tab" ></div>
+                            <div id="add-product-content" class="content tab" ></div>
                         </tbody> 
                     </div>
                 </div>
