Fix bug after merging

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -36,6 +36,7 @@
                             <p id="product-detail-label" class="menu-label">| Product detail</p>
                         </li>
                         </li>
+                        <li><a id="add-product" class="choice" onclick="loadAddForm()">Add new product</a></li>
                     </ul>
                 </aside>
             </div>
@@ -115,8 +116,8 @@
                                 </tr>
                             </table>
                         </div>
-                            <div id="add-product-content" class="content tab" ></div>
                     </div>
+                    <div id="add-product-content" class="content tab" ></div>
                     <div id="user-content" class="content tab"></div>
                     <div id="product-content" class="content tab"></div>
                 </tbody>
