use dummy data to test

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -84,7 +84,8 @@
                 </thead>
                 <tbody>
                     <div id="today-content-container" class="tab"></div>
-                    <div id="order-content" class="tab" onclick="showDetail('order-detail')">
+                    <div id="order-content" class="content tab">
+                            <!-- onclick="showDetail('order-detail')" -->
                         <!-- <div>
                             <div id="user-container">
                                 <span id="user-item">
