--- a/main-order/order.html
+++ b/main-order/order.html
@@ -5,15 +5,15 @@
         <meta charset="utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-        <link rel="stylesheet" type="text/css" href="../responsive-design/build-column.css">
-        <link rel="stylesheet" type="text/css" href="../responsive-design/off-set.css">
+        <link rel="stylesheet" type="text/css" href="static/css/responsive-design/build-column.css">
+        <link rel="stylesheet" type="text/css" href="static/css/responsive-design/off-set.css">
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Monofett'>        
         
-        <link rel="stylesheet" type="text/css" href="../main-order/order.css">
-        <link rel="stylesheet" type="text/css" href="../main-order/items.css">
-        <link rel="stylesheet" type="text/css" media="screen" href="../main-order/billstyle.css">
+        <link rel="stylesheet" type="text/css" href="/static/css/main-order/order.css">
+        <link rel="stylesheet" type="text/css" href="/static/css/main-order/items.css">
+        <link rel="stylesheet" type="text/css" media="screen" href="/static/css/main-order/billstyle.css">
     </head>
 
     <body>
@@ -23,7 +23,7 @@
             </a>
             <div class="cl-xs-8 offset-md-4 cl-md-4">
                 <div class="logo-container">
-                    <img class="logo" src="../images/logo.png" >
+                    <img class="logo" src="static/image/logo.png" >
                 </div>
             </div>
             <button class="fa cl-xs-2" id="cart-button" onclick="popUp()">&#xf07a;</button>
@@ -80,8 +80,8 @@
         </div>
     </body>
 
-    <script src="../others/utilityFunction.js"></script>
-    <script src="../main-order/orderscript.js"></script>
-    <script src="../others/orderscript.test.js"></script>
-    <script src="../main-order/orderserver.js"></script>
+    <script src="static/js/others/utilityFunction.js"></script>
+    <script src="static/js/main-order/orderscript.js"></script>
+    <script src="static/js/others/orderscript.test.js"></script>
+    <script src="static/js/main-order/orderserver.js"></script>
 </html>
