Change image direction

--- a/main-order/order.html
+++ b/main-order/order.html
@@ -23,7 +23,7 @@
             </a>
             <div class="cl-xs-8 offset-md-4 cl-md-4">
                 <div class="logo-container">
-                    <img class="logo" src="static/image/logo.png" >
+                    <img class="logo" src="static/images/logo.png" >
                 </div>
             </div>
             <button class="fa cl-xs-2" id="cart-button" onclick="popUp()">&#xf07a;</button>
