--- a/profile/profile.html
+++ b/profile/profile.html
@@ -14,7 +14,7 @@
         <div class="title cl-xs-12">
             <div class="offset-xs-2 cl-xs-8 offset-md-4 cl-md-4">
                 <div class="logo-container">
-                    <img class="logo" src="static/image/logo.png" >
+                    <img class="logo" src="static/images/logo.png" >
                 </div>
             </div>
         </div>
