--- a/login/login.html
+++ b/login/login.html
@@ -13,7 +13,7 @@
     <body>
         <div class="main-content">
             <div class="logo-container">
-                <img class="logo cl-xs-12" src="static/image/logo.png">
+                <img class="logo cl-xs-12" src="static/images/logo.png">
             </div>
             <div class="container cl-xs-12">
                 <h3>Email</h3>
