--- a/admin/admin.html
+++ b/admin/admin.html
@@ -78,7 +78,7 @@
                                 </div>
                                 <div class="media-left">
                                     <figure class="image is-48x48">
-                                        <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
+                                        <img src="../images/default-avatar.png">
                                     </figure>
                                 </div>
                             </div>
