--- a/admin/admin.html
+++ b/admin/admin.html
@@ -7,10 +7,10 @@
     <title>Admin</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-    <link rel="stylesheet" href="../css/mystyles.css">
-    <link rel="stylesheet" href="../admin/admin.css">
-    <link rel="stylesheet" href="../admin/modal-product.css">
-    <link rel="stylesheet" href="../admin/modal-user.css">
+    <link rel="stylesheet" href="static/css/css/mystyles.css">
+    <link rel="stylesheet" href="static/css/admin/admin.css">
+    <link rel="stylesheet" href="static/css/admin/modal-product.css">
+    <link rel="stylesheet" href="static/css/admin/modal-user.css">
 </head>
 
 <body>
@@ -148,10 +148,10 @@
         </div>
     </div>
 </body>
-<script src="../others/utilityFunction.js"></script>
-<script src="../admin/admin.js"></script>
-<script src="../admin/adminServer.js"></script>
-<script src="../admin/edit-product.js"></script>
-<script src="../admin/adminSignup.js"></script>
+<script src="static/js/others/utilityFunction.js"></script>
+<script src="static/js/admin/admin.js"></script>
+<script src="static/js/admin/adminServer.js"></script>
+<script src="static/js/admin/edit-product.js"></script>
+<script src="static/js/admin/adminSignup.js"></script>
 
 </html>
