--- a/admin/adminLogin.html
+++ b/admin/adminLogin.html
@@ -2,10 +2,10 @@
     <head>
         <title> Login - Snack Order</title>
         <meta charset="utf-8" />
-        <link rel="stylesheet" type="text/css" href="../responsive-design/build-column.css">
-        <link rel="stylesheet" type="text/css" href="../responsive-design/off-set.css">
+        <link rel="stylesheet" type="text/css" href="../static/css/responsive-design/build-column.css">
+        <link rel="stylesheet" type="text/css" href="../static/css/responsive-design/off-set.css">
 
-        <link rel="stylesheet" type="text/css" href="../admin/adminLogin.css">
+        <link rel="stylesheet" type="text/css" href="../static/css/admin/adminLogin.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,7 +13,7 @@
     <body>
         <div class="main-content">
             <div class="logo-container">
-                <img class="logo cl-xs-12" src="../images/logo.png">
+                <img class="logo cl-xs-12" src="../static/images/logo.png">
             </div>
             <div class="container cl-xs-12">
                 <h3>Email</h3>
@@ -26,6 +26,6 @@
             </div>
         </div>
     </body>
-    <script src="../others/utilityFunction.js"></script>
-    <script src="../admin/adminLogin.js"> </script>
+    <script src="../static/js/others/utilityFunction.js"></script>
+    <script src="../static/js/admin/adminLogin.js"> </script>
 </html>
