--- a/profile/change-password.html
+++ b/profile/change-password.html
@@ -1,11 +1,11 @@
 <html>
     <head>
         <title> Profile - Snack Order </title>
-        <link rel="stylesheet" type="text/css" href="../responsive-design/build-column.css">
-        <link rel="stylesheet" type="text/css" href="../responsive-design/off-set.css">
+        <link rel="stylesheet" type="text/css" href="../static/css/responsive-design/build-column.css">
+        <link rel="stylesheet" type="text/css" href="../static/css/responsive-design/off-set.css">
 
-        <link rel="stylesheet" type="text/css" href="../profile/profile.css">
-        <link rel="stylesheet" type="text/css" href="../main-order/order.css">
+        <link rel="stylesheet" type="text/css" href="../static/css/profile/profile.css">
+        <link rel="stylesheet" type="text/css" href="../static/css/main-order/order.css">
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,7 +14,7 @@
         <div class="title cl-xs-12">
             <div class="offset-xs-2 cl-xs-8 offset-md-4 cl-md-4">
                 <div class="logo-container">
-                    <img class="logo" src="../images/logo.png" >
+                    <img class="logo" src="../static/images/logo.png" >
                 </div>
             </div>
         </div>
@@ -67,7 +67,7 @@
             </div>
         </div>
     </body>
-    <script src="../others/utilityFunction.js"></script>     
-    <script src="../profile/changepassword.js"></script>
-    <script src="../profile/avatar.js"></script>
+    <script src="../static/js/others/utilityFunction.js"></script>     
+    <script src="../static/js/profile/changepassword.js"></script>
+    <script src="../static/js/profile/avatar.js"></script>
 </html>
