--- a/admin/admin.html
+++ b/admin/admin.html
@@ -149,8 +149,11 @@
     </div>
 </body>
 <script src="static/js/others/utilityFunction.js"></script>
-<script src="static/js/admin/admin.js"></script>
 <script src="static/js/admin/adminServer.js"></script>
+<script src="static/js/admin/admin.js"></script>
+<script src="static/js/admin/adminTodayOrder.js"></script>
+<script src="static/js/admin/adminCreateProduct.js"></script>
+
 <script src="static/js/admin/edit-product.js"></script>
 <script src="static/js/admin/adminSignup.js"></script>
 
