Split product detail information feature from admin.js to a new file, fix style code and add commentary

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -151,6 +151,7 @@
 <script src="static/js/others/utilityFunction.js"></script>
 <script src="static/js/admin/adminServer.js"></script>
 <script src="static/js/admin/admin.js"></script>
+<script src="static/js/admin/adminProductMenu.js"></script>
 <script src="static/js/admin/adminTodayOrder.js"></script>
 <script src="static/js/admin/adminCreateProduct.js"></script>
 
