upload file avatar front-end in user's profile and add commentary to code

--- a/profile/profile.html
+++ b/profile/profile.html
@@ -27,7 +27,9 @@
                         <div class="profile-user-avatar">
                             <img id="avatar" class="avatar" src="https://i.imgur.com/S2IRHcz.png" alt="User Avatar">
                         </div>
-                        <input type="file" id="avatar-input-field">  
+                        <form id="image-upload" enctype="multipart/form-data" method="POST">
+                            <input type="file" id="avatar-input-field">  
+                        </form>
                         <div class="profile-username" id="user-field">
                             </div>
                         <div class="profile-menu">
